<resources>
    <string name="app_name">Imek_tf2</string>
    <string name="action_debugmode">Debug</string>
    <string name="action_prefs">Preferences</string>

    <string name="pref_imgpreproc_thresh_maxval">pref_imgpreproc_thresh_maxval</string>
    <string name="pref_imgpreproc_thresh_blocksize">pref_imgpreproc_thresh_blocksize</string>
    <string name="pref_imgpreproc_thresh_c">pref_imgpreproc_thresh_c</string>
    <string name="pref_imgpreproc_dilate_itrs">pref_imgpreproc_dilate_itrs</string>
    <string name="pref_imgpreproc_erosion_itrs">pref_imgpreproc_erosion_itrs</string>

    <string name="pref_imgpreproc_thresh_maxval_name">Img proc threshold maxval</string>
    <string name="pref_imgpreproc_thresh_blocksize_name">Img proc threshold blocksize</string>
    <string name="pref_imgpreproc_thresh_c_name">Img proc threshold c</string>
    <string name="pref_imgpreproc_dilate_itrs_name">Img proc dilation iterations</string>
    <string name="pref_imgpreproc_erosion_itrs_name">Img proc erosion iterations</string>

    <string-array name="ui_texts">
        <item>Different languages have different rules for grammatical agreement with quantity. In English, for example, the quantity 1 is a special case.</item>
        <item>All Android devices have two file storage areas: "internal" and "external" storage. These names come from the early days of Android, when most devices offered built-in non-volatile memory (internal storage), plus a removable storage medium such as a micro SD card (external storage).</item>
        <item>The user interface of an activity often changes in response to user input and other events. For example, an activity that contains a form where users can type search queries can hide the form when the user submits it and show a list of search results in its place.</item>
        <item>Build a user interface that's flexible enough to fit perfectly on any screen and how to create different interaction patterns that are optimized for different screen sizes.</item>
    </string-array>

    <string-array name="ui_options">
        <item>Yes, maybe?</item>
        <item>No, let me think</item>
        <item>Go left</item>
        <item>Go right</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
</resources>
